--- a/QuickSort.Tests/QuickSort.Tests.csproj
+++ b/QuickSort.Tests/QuickSort.Tests.csproj
@@ -38,7 +38,10 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockRecursiveQuickSort.cs" />
+    <Compile Include="MockSortProblem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursiveQuickSortTest.cs" />
     <Compile Include="SplitByMedianItemTest.cs" />
   </ItemGroup>
   <ItemGroup>
